# pythondoctor

./: AGENTS.md  README.md  pyproject.toml  whitelist.py
.github/workflows/: ci.yml  publish.yml
skills/py-gate/: SKILL.md
skills/pycodegate/: SKILL.md
src/pycodegate/: __init__.py  _compat.py  api.py  cli.py  config.py  constants.py  discover.py  output.py  profile.py  scan.py  score.py  types.py
src/pycodegate/rules/: __init__.py  architecture.py  base.py  celery.py  complexity.py  correctness.py  dead_code.py  dependencies.py  django.py  fastapi.py  flask.py  imports.py  logging_rules.py  numpy_rules.py  pandas_rules.py  performance.py  pydantic.py  pytest_rules.py  requests_rules.py  security.py  sqlalchemy.py  structure.py
src/pycodegate/utils/: __init__.py  badge.py  file_discovery.py  fixer.py  precommit.py
src/python_doctor/: cli.py  config.py  constants.py  discover.py  output.py  profile.py  scan.py  score.py
src/python_doctor/rules/: __init__.py  architecture.py  base.py  correctness.py  dead_code.py  dependencies.py  django.py  flask.py  imports.py  performance.py  security.py
src/python_doctor/utils/: ast_helpers.py  diff.py  file_discovery.py
tests/: test_cli.py  test_config.py  test_discover.py  test_fixer.py  test_integration.py  test_output.py  test_profile.py  test_scan.py  test_score.py  test_types.py
tests/fixtures/basic_python/: app.py
tests/fixtures/clean_project/: app.py
tests/rules/: test_architecture.py  test_celery.py  test_complexity.py  test_correctness.py  test_dead_code.py  test_dependencies.py  test_django.py  test_fastapi.py  test_flask.py  test_imports.py  test_logging_rules.py  test_numpy_rules.py  test_pandas_rules.py  test_performance.py  test_pydantic.py  test_pytest_rules.py  test_requests_rules.py  test_security.py  test_security_new.py  test_sqlalchemy.py  test_structure.py
