[project]
name = "python-doctor"
version = "0.1.0"
description = "Diagnose your Python project's health. Get a score, find issues, fix them."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mohit Khare" }]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "vulture>=2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
python-doctor = "python_doctor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_doctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.python-doctor]
[tool.python-doctor.ignore]
files = ["tests/fixtures/**"]
