[project]
name = "py-gate"
version = "0.1.0"
description = "Diagnose your Python project's health. Get a score, find issues, fix them."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mohit Khare" }]
keywords = ["linter", "health", "diagnostics", "security", "architecture", "dead-code", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "vulture>=2.11",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/themohitkhare/py-gate"
Repository = "https://github.com/themohitkhare/py-gate"
Issues = "https://github.com/themohitkhare/py-gate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
py-gate = "python_doctor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_doctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tests/fixtures/**", "whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["SIM102"]  # nested ifs in AST walking are clearer than combined conditions

[tool.ruff.lint.per-file-ignores]
"src/python_doctor/rules/*.py" = ["E501"]  # rule messages are naturally long
"src/python_doctor/rules/__init__.py" = ["TC001"]  # runtime imports needed
"src/python_doctor/rules/base.py" = ["TC001"]  # runtime import in abstract method
"src/python_doctor/utils/*.py" = ["E501"]

[tool.py-gate]
[tool.py-gate.ignore]
files = ["tests/fixtures/**"]
