[project]
name = "pycodegate"
version = "0.1.2"
description = "One command. One score. Your Python quality gate."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mohit Khare" }]
keywords = ["python", "linting", "code-quality", "ai-agents", "static-analysis", "developer-tools", "quality-gate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "vulture>=2.11",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/themohitkhare/pycodegate"
Repository = "https://github.com/themohitkhare/pycodegate"
Issues = "https://github.com/themohitkhare/pycodegate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
pycodegate = "pycodegate.cli:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycodegate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tests/fixtures/**", "whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["SIM102"]  # nested ifs in AST walking are clearer than combined conditions

[tool.ruff.lint.per-file-ignores]
"src/pycodegate/rules/*.py" = ["E501"]  # rule messages are naturally long
"src/pycodegate/rules/__init__.py" = ["TC001"]  # runtime imports needed
"src/pycodegate/rules/base.py" = ["TC001"]  # runtime import in abstract method
"src/pycodegate/utils/*.py" = ["E501"]

[tool.pycodegate]
[tool.pycodegate.ignore]
files = ["tests/fixtures/**", "tests/**"]

[tool.pycodegate.per-file-suppress]
# Click CLI entry-points must declare all options as individual parameters
"src/pycodegate/cli.py" = ["too-many-arguments"]
